# AllumFURNITURE

./: .env  .gitignore  Makefile  README.md  backend_starter.sh  doc.txt  pyproject.toml  route.t  servises.t  start_postgres_docker.sh
.github/workflows/: CI_flake8.yml
api/: .env  .gitignore  Makefile  backend_starter.sh
api/migrations/: env.py
api/migrations/versions/: 71be1e0d114a_.py  a806a619c506_initial_revision.py
api/src/: config.py  db.py  main.py
api/src/models/: bundle.py  furniture.py  order.py  partpreform.py
api/src/routes/: bundle.py  furniture.py  materials.py  modifitors.py  order.py  part.py  partpreform.py
api/src/schemes/: materials.py  order.py
api/src/servises/: bundle.py  client.py  furniture.py  material.py  modificators.py  order.py  part.py
migrations/: env.py
migrations/versions/: 09a727169776_rew1.py  30d2ea1cc7bd_.py  40fabb13ae1e_rew2.py  53835a0f2b5b_initial_revision.py  5a9c85771f4b_.py  ca3538b2433b_.py
src/: .env  config.py  main.py  models.py  modules.py  routes.py  schemes.py  servises.py
src/models/: client.py  furniture.py  material.py  modificators.py  order.py  part.py
src/routes/: bundle.py  client.py  furniture.py  materials.py  modifitors.py  order.py  part.py  partpreform.py
src/schemes/: bundle.py  client.py  furniture.py  materials.py  modificators.py  order.py  part.py  part_preform.py  partpreform.py
src/servises/: bundle.py  client.py  furniture.py  material.py  modificators.py  order.py  part.py  partpreform.py
